bases de toutes les pages posees + dev complet page placeholder (front end only) nos produits + réorganisation css global

--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
                 <div class="logo">VITA<span>GREEN</span></div>
                 <nav>
                     <ul>
-                        <li><a href="#">Accueil</a></li>
-                        <li><a href="#">Nos produits</a></li>
-                        <li><a href="#">Notre histoire</a></li>
-                        <li><a href="#">Nos valeurs</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="index.html">Accueil</a></li>
+                        <li><a href="nos-produits.html">Nos produits</a></li>
+                        <li><a href="notre-histoire.html">Notre histoire</a></li>
+                        <li><a href="nos-valeurs.html">Nos valeurs</a></li>
+                        <li><a href="processus.html">Processus</a></li>
+                        <li><a href="sante-bien-etre.html">Santé & Bien-être</a></li>
+                        <li><a href="partenaires-producteurs.html">Partenaires</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+
                     </ul>
                 </nav>
             </div>
@@ -49,6 +53,7 @@
                     <h3>VALEUR 1 : SANTÉ RADICALE</h3>
                     <p class="bold-text">Votre Santé, Notre Engagement Absolu</p>             
                     <p>« Nous pratiquons une <span class="medium-bold-text">transparence totale</span> sur nos recettes. Chaque ingrédient doit justifier sa présence par ses bienfaits nutritionnels.»</p>
+                    <img src="./img/createurs.webp" alt="Créateurs de Vitagreen" class="landscape-illustration">
                     <p class="bold-text">Notre charte qualité :</p>
                     <ul class="valeur-features">
                         <li>✅ 100% des ingrédients d'origine biologique</li>
@@ -63,6 +68,7 @@
                     <h3>VALEUR 2 : ÉCOLOGIE ENGAGÉE</h3>
                     <p class="bold-text">Notre Empreinte, Notre Responsabilité</p>            
                     <p>« Notre engagement écologique va bien au-delà du greenwashing. Chaque décision d'entreprise est soumise à notre <span class="medium-bold-text">« test des 3 générations »</span> : cette action serait-elle bénéfique pour nos petits-enfants ?»</p>
+                    <img src="./img/nous_origine.webp" alt="nous à l'origine" class="landscape-illustration">
                     <p class="bold-text">Nos réalisations concrètes :</p>
                     <ul class="valeur-features">
                         <li>🏭 Usine à énergie positive (100% solaire + surplus au réseau)</li>
@@ -77,6 +83,7 @@
                     <h3>VALEUR 3 : ÉTHIQUE EXIGEANTE</h3>
                     <p class="bold-text">La Juste Répartition de la Valeur</p>            
                     <p>« Nous croyons en une <span class="medium-bold-text">économie circulaire et solidaire</span>. Chaque acteur de notre chaîne doit vivre dignement de son travail.»</p>
+                    <img src="./img/labels.webp" alt="labels vitagreen" class="landscape-illustration">
                     <p class="bold-text">Notre modèle éthique :</p>
                     <ul class="valeur-features">
                         <li>👨‍🌾 Producteurs : Prix d'achat 25% supérieur au marché + prime qualité</li>
@@ -90,7 +97,7 @@
         </div>
     </section>
 
-    <img src="./img/boisson_verse.webp" alt="verse boisson vitreen" class="illustration-transition" />
+    <img src="./img/boisson_verse.webp" alt="verse boisson vitagreen" class="illustration-transition />
 
     <!-- HISTOIRE SECTION -->
     <section class="histoire">
@@ -254,7 +261,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 VitaGreen - Tous droits réservés | Des boissons saines, pour vous et la planète</p>
+                <p>&copy; 2025 VitaGreen - Tous droits réservés | Des boissons saines, pour vous et la planète</p>
             </div>
         </div>
     </footer>
